--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,3 @@
-[package]
-name = "ascii-izer"
-version = "0.1.0"
-edition = "2021"
-
-[dependencies]
-image = "0.25.5"
+[workspace]
+members = ["ascii-test", "core"]
+resolver = "2"
