--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2021"
 license = "Apache-2.0"
 
 [features]
-default = ["crossterm"]
+default = []
 crossterm = ["dep:crossterm"]
 
 [dependencies]
