refactor: basically a rewrite

--- a/ascii-test/Cargo.toml
+++ b/ascii-test/Cargo.toml
@@ -5,8 +5,4 @@ edition = "2021"
 license = "Apache-2.0"
 
 [dependencies]
-ascii-izer = { path = "../core", optional = true }
-
-[features]
-test = [ "dep:ascii-izer" ]
-terminal = ["test", "ascii-izer/crossterm"]
+ascii-izer = { path = "../core", features = ["crossterm"]}
