--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -5,8 +5,9 @@ edition = "2021"
 license = "Apache-2.0"
 
 [features]
-default = []
+default = ["color"]
 crossterm = ["dep:crossterm"]
+color = []
 
 [dependencies]
 crossterm = { version = "0.28.1", optional = true }
