--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -3,6 +3,7 @@ name = "ascii-izer"
 version = "0.1.0"
 edition = "2021"
 license = "Apache-2.0"
+description = "A library for converting an image into ASCII art"
 
 [features]
 default = ["color"]
