--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2021"
 license = "Apache-2.0"
 description = "A library for converting an image into ASCII art"
+readme = "../README.md"
 
 [features]
 default = ["color"]
