--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 license = "Apache-2.0"
 description = "A library for converting an image into ASCII art"
 readme = "../README.md"
+repository = "https://github.com/ThePoultryMan/ascii-izer"
 
 [features]
 default = ["color"]
